# MARA-v2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: mara_agent_pipeline.md  mara_agents.md  mara_merkle.md
mara/: config.py  llm.py  logging.py
mara/agent/: __init__.py  graph.py  scoring.py  state.py
mara/agent/edges/: __init__.py  routing.py
mara/agent/nodes/: __init__.py  certified_output.py  chunk_selector.py  corpus_assembler.py  query_planner.py  report_synthesizer.py  run_agent.py
mara/agents/: __init__.py  base.py  cache.py  filtering.py  registry.py  types.py
mara/agents/arxiv/: __init__.py  agent.py  fetcher.py  latex_parser.py
mara/agents/biorxiv/: agent.py
mara/agents/citation_graph/: agent.py
mara/agents/core/: __init__.py  agent.py  fetcher.py
mara/agents/nber/: agent.py
mara/agents/pubmed/: agent.py  fulltext.py  search.py
mara/agents/pwc/: agent.py
mara/agents/semantic_scholar/: agent.py
mara/agents/utils/: pdf.py
mara/agents/web/: agent.py  scraper.py  url_filter.py
mara/cli/: __init__.py  run.py
mara/merkle/: __init__.py  forest.py  hasher.py  proof.py  tree.py
tests/: test_cli.py  test_config.py  test_llm.py  test_logging.py
tests/agent/: conftest.py  test_graph.py  test_routing.py  test_scoring.py  test_state.py
tests/agent/nodes/: test_certified_output.py  test_chunk_selector.py  test_corpus_assembler.py  (+3 more)
tests/agents/: conftest.py  test_base.py  test_cache.py  test_filtering.py  test_registry.py  test_types.py
tests/merkle/: test_forest.py  test_hasher.py  test_proof.py  test_tree.py
(+24 files in other folders)
