[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mara"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-huggingface",
    "langsmith",
    "httpx",
    "firecrawl-py",
    "pypdf",
    "pdfminer-six",
    "pylatexenc",
    "ftfy",
    "pydantic>=2",
    "pydantic-settings",
    "typer",
    "psycopg[binary]",
    "rank-bm25",
    "curl-cffi>=0.14.0",
]

[dependency-groups]
test = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = [
    "--cov=mara",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=98",
]

[project.scripts]
mara = "mara.cli.run:app"

[tool.coverage.run]
branch  = true
source  = ["mara"]

[tool.coverage.report]
show_missing = true
skip_covered = false
